fixed navigation buttons overflowing over the line in Firefox

--- a/app/webroot/css/ipeer.css
+++ b/app/webroot/css/ipeer.css
@@ -286,7 +286,7 @@ div.ui-datepicker { font-size: 0.85em; }
     font-weight: 600;
     text-align: center;
     padding: 0.5em;
-    padding-bottom: 0.45em;
+    padding-bottom: 0.43em;
     padding-left: 0.6em;
     text-decoration: none;
     background-color: #0a2a64;
